Fix navbar CSS and visibility of certain sections

--- a/ThriftBook_phase2/wwwroot/css/site.css
+++ b/ThriftBook_phase2/wwwroot/css/site.css
@@ -139,7 +139,9 @@ img {
 }
 
 .search-div {
-    margin-left: 11em;
+   
+   margin-left: 4em;
+  
 }
 
 .create-book {
@@ -164,7 +166,8 @@ img {
 .navbar-brand {
     font-family: 'Bree Serif', serif;
     font-family: 'Pacifico', cursive;
-    font-size: 30px;
+    font-size: 25px;
+    min-width: 190px;
 }
 
 .available-books {
@@ -249,4 +252,3 @@ footer {
 .logo-img1 {
     width: 50px;
     height: 50px;
-}
